Uploaded image for project: 'ORC'
  1. ORC
  2. ORC-172

Fix C++ build issue with Centos6

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 1.3.4, 1.4.0
    • None
    • None

    Description

      The patch for ORC-122 requires explicit copy and move of the Timezone class since it contains a unique_ptr as one of its member. The simpler fix is to make the member a shared_ptr. A similar change is made for the TimezoneCache.

      Attachments

        Issue Links

          Activity

            People

              mdeepak Deepak Majeti
              mdeepak Deepak Majeti
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: