ORC-172 Replace unique_ptr with shared_ptr for timezone cache.

Fixes #109

Signed-off-by: Owen O'Malley <omalley@apache.org>